--- a/src/pages/Chat/index.css
+++ b/src/pages/Chat/index.css
@@ -79,22 +79,25 @@
 
 .user-input {
   width: 100%;
-  height: 2rem;
-  max-height: 8rem;
+  height: 2.2rem;
+  max-height: 8.5rem;
   overflow: scroll;
   padding: .5rem;
   font-size: 1rem;
+  line-height: 1.2rem;
   background-color: rgb(51, 59, 102);
   border-radius: 5px;
   color: #fff;  
 
   /* clear textarea style */
-  border: none;
+  /* Using 'border: none' will affect the 'scrollHeight' property, causing it not to decrease when the content decreases. */
+  /* border: none; */
   outline: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  resize: none; /*remove the resize handle on the bottom right*/
+  /* remove the resize handle on the bottom right */
+  resize: none; 
 }
 
 .user-input::placeholder {
