--- a/src/pages/Chat/index.css
+++ b/src/pages/Chat/index.css
@@ -72,6 +72,7 @@
 .input-pane {
   width: 100%;
   padding: 1rem;
+  display: block;
   justify-content: space-between;
   background-color: var(--primary-color);
   border-top: 1px solid #ffffffaa;
@@ -80,14 +81,14 @@
 .user-input {
   width: 100%;
   height: 2.2rem;
-  max-height: 8.5rem;
+  max-height: 7rem;
   overflow: scroll;
   padding: .5rem;
   font-size: 1rem;
   line-height: 1.2rem;
   background-color: rgb(51, 59, 102);
   border-radius: 5px;
-  color: #fff;  
+  color: #fff;
 
   /* clear textarea style */
   /* Using 'border: none' will affect the 'scrollHeight' property, causing it not to decrease when the content decreases. */
@@ -109,7 +110,57 @@
 }
 
 .input-pane .btn {
-  height: 2rem;
+  height: 2.2rem;
   margin-left: 1rem;
-  padding: .25rem 2rem !important;
+  display: flex;
+  align-items: center; 
+  padding: 0 2rem !important;
+}
+
+.menu {
+  margin-right: 1rem;
+  width: 1.75rem;
+  height: 2.2rem;
+}
+
+.hamburger {
+  width: 100%;
+  height: 1rem;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.hamburger .hamburger-line {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: .2s;
+}
+
+.hamburger.active .hamburger-line:nth-child(1) {
+  transform: translateY(calc(0.5rem - 50%)) rotate(-135deg);
+}
+
+.hamburger.active .hamburger-line:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active .hamburger-line:nth-child(3) {
+  transform: translateY(calc(-0.5rem + 50%)) rotate(135deg);
+}
+
+.menu-pane {
+  padding: 1rem;
+  background-color: var(--primary-color);
+  border-top: 1px solid #ffffffaa;
+  transition: .5s;
+}
+
+.menu-pane .btn {
+  width: 7rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
